ensured post list tags do not overflow their container

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -41,6 +41,10 @@ h1 .badge.is-tag.is-master-tag {
   font-size: 14px;
 }
 
+.post-list--tags {
+  max-width: 100%;
+}
+
 .post-list--title {
   font-size: 19px;
   width: 100%;
